cleaned up gui build using jdk-13